js/src/tests/test262/built-ins/Promise/reject/S25.4.4.4_A1.1_T1.js
if
(
(
typeof
Promise
.
reject
)
!
=
=
"
function
"
)
{
throw
new
Test262Error
(
"
Expected
Promise
.
reject
to
be
a
function
"
)
;
}
reportCompare
(
0
0
)
;
